--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+flume = { version = "0.11.0", default-features = false }
+# midi-convert = "0.2.0"
+midir = "0.9.1"
+ncurses = "5.101.0"
+parking_lot = "0.12.1"
+spin_sleep = "1.1.1"
